bunch of changes

--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -18,7 +18,7 @@ simpleCart.email = "{{ settings.PAYPAL_RECEIVER_EMAIL }}";</script>
   </div>
 </div>
 <div class="visible-xs hidden-sm hidden-md hidden-lg">
-  <div id="mobileCart"><a href="#cart">View Cart</a></div>
+  <div id="mobileCart" class="alert alert-success"><a href="#cart">View Cart</a></div>
 </div>
 {% comment %}
 <div class="well accordion" id="cart">
