--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -1,6 +1,9 @@
 @import "bootstrap/less/variables.less";
 @import "colors.less";
 @import "txrx.less";
+
+@import "footer.less";
+
 @import "thing.less";
 @import "slideshow.less";
 @import "home.less";
