--- a/txrx/static/less/bootstrap/less/variables.less
+++ b/txrx/static/less/bootstrap/less/variables.less
@@ -14,10 +14,10 @@
 @gray-lighter:           lighten(#000, 93.5%); // #eee
 
 @brand-primary:         #3491bf;
-@brand-success:         #5cb85c;
+@brand-success:         #10a49b;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #bd244a;
+@brand-danger:          #b11444;
 
 
 //== Scaffolding
