--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -58,6 +58,7 @@
 
       {% block footer %}
       <footer>
+        {% include "footer.html" %}
       </footer>
       {% endblock %}
     </div>
