--- a/txrx/templates/flatpages/default.html
+++ b/txrx/templates/flatpages/default.html
@@ -11,11 +11,29 @@
 {% endblock %}
 
 {% block side %}
-{% for photo in flatpage|get_photos %}
-{% thumbnail photo.file "300x300" crop="center" as im %}
-<img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
-{% endthumbnail %}
-{% empty %}
+{% if request.path == "/map/" %}
+<section class="events_box">
+  <h3 class="block_title">Contact Us</h3>
+  <ul class="list-unstyled">
+    <li><b>General Inquiry</b></li>
+    <li><a href="mailto:txrxlabs@gmail.com">txrxlabs@gmail.com</a></li>
+    <li>&nbsp;</li>
+    <li><b>Mailing Address</b></li>
+    <li>
+      <a href="https://goo.gl/maps/xD5ST">
+        205 Roberts Street<br/>
+        Houston, TX 77003
+      </a>
+    </li>
+    <li>&nbsp;</li>
+    <li><b>Social/Online</b></li>
+    <li><a href="">Facebook</a></li>
+    <li><a href="">Twitter</a></li>
+    <li><a href="https://groups.google.com/forum/#!forum/txrxlabs">Google Groups (Public)</a></li>
+    <li><a href="https://groups.google.com/forum/#!forum/txrxmembership">Google Groups (Members)</a></li>
+  </ul>
+</section>
+{% else %}
 {{ block.super }}
-{% endfor %}
+{% endif %}
 {% endblock %}
