--- a/course/templates/course/_myclasses.html
+++ b/course/templates/course/_myclasses.html
@@ -1,6 +1,6 @@
+{% if request.user.is_authenticated %}
 <section class="events_box">
   <h3 class="block_title">My Classes</h3>
-  {% if request.user.is_authenticated %}
   <ul class="list-unstyled">
     {% for session in user_sessions %}
     <li>
@@ -8,13 +8,9 @@
     </li>
     {% endfor %}
   </ul>
-  <div class="alert alert-warning">
+  <div class="alert alert-danger">
     After you pay for a class it should appear here. If it does not, please email
     <a href="mailto:txrxlabs@gmail.com">txrxlabs@gmail.com</a>.
   </div>
-  {% else %}
-  <div class="alert alert-warning">
-    Please <a href="/accounts/login/">Log in</a> to view your classes. If you do not have an account, one will be made when you register and login information will be sent to the email address associated with your PayPal account. If you have questions please email <a href="mailto:txrxlabs@gmail.com">txrxlabs@gmail.com</a>.
-  </div>
-  {% endif %}
 </section>
+{% endif %}
