--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -17,7 +17,7 @@
 {% if request.user.is_authenticated %}
 {# TODO: my classes widget #}
 {% else %}
-<p class="alert alert-success">
+<p class="alert alert-error">
   Already signed up? <a href="/accounts/login/">Log in</a> to see your classes.<br />
   If not, an account will be automatically created when you first pay for a class.
 </p>
