--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -32,17 +32,16 @@
     border-bottom: 1px @borderGray solid;
   }
   .bottom {
-    color: @borderGray;
     line-height: 1;
     position: relative;
     top: 2px;
     .subjects,.notes {
       display: inline-block;
-      min-height: 10px;
-      overflow: hidden;
+      min-height: 1em;
       vertical-align: top;
       width: 49%;
     }
+    .subjects { color: @borderGray; overflow: hidden; }
     .has_notes { float: right; padding: 0 10px; }
   }
 }
