--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -15,6 +15,11 @@ section { padding-bottom: 25px; }
   position: absolute;
   z-index: 10;
 }
+.ViewAll {
+  float: right;
+  padding: 10px 20px;
+  text-transform: none;
+}
 /* bootstrap overrides */
 .navbar-brand { padding: 10px; }
 .navbar-collapse { max-height: none; }
@@ -40,6 +45,11 @@ html, body { overflow-x: hidden; }
 
 header, #main {
   padding: 0 15px;
+}
+
+.narrow_page {
+  margin: 0 auto;
+  max-width: 990px;
 }
 
 h1.page_title {
