--- a/txrx/templates/thing/thing_detail.html
+++ b/txrx/templates/thing/thing_detail.html
@@ -6,42 +6,56 @@
 {% block title %}{{ thing }} by {{ thing.user }}{% endblock %}
 
 {% block main %}
-<div class="col-sm-8">
-  <div class="thing_detail">
-    {% include "widgets/thing_slideshow.html" %}
+<div class="narrow_page">
+  <div class="col-sm-8">
+    <div class="thing_detail">
+      {% include "widgets/thing_slideshow.html" %}
+    </div>
   </div>
-  {% display_comment_toplevel_for thing %}
-</div>
-<div class="col-sm-4">
-  <section class="thing_details">
-    <h3 class="block_title">{{ thing }}</h3>
-    <div>
-      <div class="left">Created by:</div>
-      <div class="right">{{ thing.user }}</div>
-    </div>
-    <div>
-      <div class="left">Date Submitted:</div>
-      <div class="right">{{ thing.publish_dt.date }}</div>
-    </div>
-    {% if thing.materials.all %}
-    <div>
-      <div class="left">Materials:</div>
-      <div class="right">{{ thing.materials.all|join:", " }}</div>
-    </div>
-    {% endif %}
-    {% if thing.get_tools %}
-    <div>
-      <div class="left">Machine{{ thing.get_tools|pluralize:"s" }}:</div>
-      <div class="right">
-        {% for tool in thing.get_tools %}
-        <div>{{ tool }}</div>
-        {% endfor %}
+  <div class="col-sm-4">
+    <section class="thing_details">
+      <h3 class="block_title">{{ thing }}</h3>
+      <div class="well">
+        <div>
+          <div class="left">Created by:</div>
+          <div class="right">{{ thing.user }}</div>
+        </div>
+        <div>
+          <div class="left">Date Submitted:</div>
+          <div class="right">{{ thing.publish_dt.date }}</div>
+        </div>
+        {% if thing.get_tools %}
+        <div>
+          <div class="left">Materials:</div>
+          <div class="right">{{ thing.materials.all|join:", " }}</div>
+        </div>
+        {% endif %}
+        {% if thing.get_tools %}
+        <div>
+          <div class="left">Machine{{ thing.get_tools|pluralize:"s" }}:</div>
+          <div class="right">
+            {% for tool in thing.get_tools %}
+            <div>{{ tool }}</div>
+            {% endfor %}
+          </div>
+        </div>
+        {% endif %}
+        {% if thing.parent_link %}
+        <div>
+          <div class="left">&nbsp;</div>
+          <div class="right">
+            <a href="{{ thing.parent_link }}">{{ thing.get_parent_text }}</a>
+          </div>
+        </div>
+        {% endif %}
+        <div class="description">
+          {{ thing.description|public_explosivo }}
+        </div>
       </div>
-    </div>
-    {% endif %}
-    <div class="description">
-      {{ thing.description|public_explosivo }}
-    </div>
-  </section>
+    </section>
+  </div>
+</div>
+<div class="col-xs-12">
+  {% display_comment_toplevel_for thing %}
 </div>
 {% endblock %}
