--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -1,4 +1,5 @@
 @import "bootstrap/less/variables.less";
+@import "bootstrap/less/mixins.less";
 @import "colors.less";
 @import "txrx.less";
 
@@ -7,4 +8,5 @@
 @import "thing.less";
 @import "slideshow.less";
 @import "home.less";
+@import "calendar.less";
 @import "course.less";
