--- a/txrx/static/less/footer.less
+++ b/txrx/static/less/footer.less
@@ -12,7 +12,7 @@ footer {
   .right { right: 0; }
 }
 
-@media (max-width: @screen-xs-max) {
+@media (max-width: @screen-sm-max) {
   footer {
     .left, .right { position: static; }
   }
