--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -24,6 +24,7 @@
     <script src="{{ STATIC_URL }}mptt_comments/js/mptt_comments.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
     {% endcompress %}
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}MyFontsWebfontsKit/MyFontsWebfontsKit.css" />
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}lightbox/css/lightbox.css" />
     <script>
       var f = new Favico({
@@ -44,13 +45,13 @@
 
       <div class="row" id="main">
         {% block main %}
-        <div class="col-sm-8 col-md-9">
+        <div class="col-sm-6 col-md-8">
           {% block header %}
           <h1 class="page_title">{% block header_content %}{{ SITE_TAGLINE }}{% endblock %}</h1>
           {% endblock %}
           {% block content %}{% endblock %}
         </div>
-        <div class="col-sm-4 col-md-3" id="side">
+        <div class="col-sm-6 col-md-4" id="side">
           {% block side %}{% include "_side.html" %}{% endblock %}
         </div>
         {% endblock %}
