--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -1,6 +1,8 @@
 @import "bootstrap/less/variables.less";
 @import "bootstrap/less/mixins.less";
 @import "colors.less";
+@import "global.less";
+@import "nav.less";
 @import "txrx.less";
 
 @import "footer.less";
