--- a/txrx/static/less/home.less
+++ b/txrx/static/less/home.less
@@ -13,15 +13,13 @@
 	width: 100%;
 	z-index: 0;
       }
-      float: left;
-      padding: 0 15px;
       img {
 	max-width: 100%;
       }
     }
   }
 }
-.FeaturedThings a { /*home behavior */
+.things a { /*home behavior */
   .hover {
     background: #444;
     background: fade(@gray-dark,80%);
@@ -31,6 +29,7 @@
     height: 100%;
     left: 0;
     position: absolute;
+    text-shadow: 0 0 5px black;
     top: 0;
     width: 100%;
     .title {
@@ -42,7 +41,6 @@
       .author {
 	border-top: 1px white solid;
 	font-size: 0.8em;
-	margin-top: 5px;
 	padding-top: 5px;
       }
     }
@@ -53,16 +51,6 @@
   }
 }
 
-.thing_index a { /* index behavior */
-  color: inherit;
-  &:hover { text-decoration: none; }
-  .title {
-    height: 2.8em;
-    overflow: hidden;
-  }
-  .author { font-size: 0.9em }
-}
-
 .thing_index {
   min-height: 10px;
   overflow: hidden;
@@ -70,22 +58,7 @@
 
 @media (max-width:599px) {
   #main { margin: 0; padding: 0; }
-  .FeaturedThings,.thing_index {
-    .thing {
-      width: 50%;
-      padding: 0 10px;
-      a { margin-bottom: 10px; }
-    }
-  }
 }
-@media (min-width:600px) {
-  .FeaturedThings,.thing_index {
-    .thing {
-      width: 100/3%;
-    }
-  }
-}
-@media (min-width:990px) { .FeaturedThings,.thing_index { .thing { width: 25%; } } }
 
 .recent_blogs {
   .blogs {
@@ -99,16 +72,6 @@
       font-size: 18px;
       height: 3.9em;
       line-height: 1.3;
-    }
-  }
-}
-
-@media (max-width:400px) {
-  .recent_blogs {
-    .blog_well {
-      float: none;
-      margin: 0 auto;
-      width: 100%;
     }
   }
 }
