--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -11,13 +11,13 @@
       <span class="icon-bar"></span>
     </button>
     <a class="navbar-brand" href="/">
-      <img src="{{ STATIC_URL }}img/{{ request.theme }}-logo.png" height="30" width="115"
+      <img src="{{ STATIC_URL }}img/new_logo.gif" height="49"
            alt="Tx/Rx Labs - {{ SITE_TAGLINE }}" title="Tx/Rx Labs - {{ SITE_TAGLINE }}"/></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="navbar-collapse-1">
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav main-nav">
       {% for n in nav %}
       {% if n.sublinks %}
       <li class="dropdown">
