--- a/txrx/templates/index.html
+++ b/txrx/templates/index.html
@@ -12,7 +12,8 @@
   <div class="things">
     {% for thing in things %}
     {% thumbnail thing.first_photo|get_override:"square_crop" "300x300" crop="center" as im %}
-    <div class="thing thing{{ forloop.counter }}">
+    <div class="thing thing{{ forloop.counter }} col-xs-6 col-md-4 col-lg-3 hidden246">
+{#{% if forloop.counter > 2 %} hidden-xs{% endif %}{% if forloop.counter > 4 %} hidden-sm{% endif %}{% if forloop.counter > 6 %} hidden-md{% endif %}#}
       <a href="{{ thing.get_absolute_url }}">
         <img src="{{ im.url }}" />
         <div class="hover">
@@ -33,7 +34,7 @@
   <div class="blogs">
     {% for post in posts %}
     {% thumbnail post.photo|get_override:"landscape_crop" "300x200" crop="center" as im %}
-    <div class="blog_well col-xs-6 col-md-4">
+    <div class="blog_well col-sm-12 col-md-6 col-lg-4 hidden112">
       <div class="well">
         <a href="{{ post.get_absolute_url }}">
           <img src="{{ im.url }}" width="300" height="200" />
