adding blog styling and short_content

--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -8,6 +8,7 @@
 @import "footer.less";
 
 @import "thing.less";
+@import "blog.less";
 @import "slideshow.less";
 @import "home.less";
 @import "calendar.less";
