--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -32,13 +32,13 @@ header, #main {
 }
 
 h1.page_title {
+  color: @gray-dark;
   border-bottom: 2px solid;
   font-weight: normal;
   line-height: 37px;
   margin-bottom: 15px;
   padding-right: 120px;
   position: relative;
-  //.navFont;
   .calendar_widget {
     position: absolute;
     top: 0;
@@ -48,9 +48,10 @@ h1.page_title {
 }
 
 h3.block_title {
+  color: @gray-dark;
+  font-weight: normal;
   margin: 0 15px 15px;
   text-transform: uppercase;
-  //.navFont;
 }
 
 #side {
