--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -11,7 +11,7 @@
       <span class="icon-bar"></span>
     </button>
     <a class="navbar-brand" href="/">
-      <img src="{{ STATIC_URL }}img/new_logo.gif" height="49"
+      <img src="{{ STATIC_URL }}img/new_logo.png" height="49"
            alt="Tx/Rx Labs - {{ SITE_TAGLINE }}" title="Tx/Rx Labs - {{ SITE_TAGLINE }}"/></a>
   </div>
 
