--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -1,5 +1,6 @@
 .wmd-panel {margin: 0; }
 section { padding-bottom: 25px; }
+section.banner { padding-bottom: 35px; }
 .comment:target > .comment_outer { background-color: @successBackground; }
 
 .transition(@value) {
