--- a/txrx/static/less/blog.less
+++ b/txrx/static/less/blog.less
@@ -1,23 +1,35 @@
-.recent_blogs {
-  .blogs {
-    .well { position: relative; min-height: 160px; }
+.recent_blogs .blogs {
+  .well { position: relative; min-height: 160px; }
+  .photo {
+    left: 5px;
+    position: absolute;
+    top: 5px;
+    z-index: 1;
+    img { height: auto; max-width: 100%; }
+  }
+  .details { padding-left: 210px; }
+  .title {
+    font-size: 18px;
+    line-height: 1.3;
+  }
+  .text { padding: 10px 0 15px 10px; }
+  .read_more {
+    bottom: 5px;
+    position: absolute;
+    right: 5px;
+  }
+}
+
+@media (max-width: @screen-xs-max) {
+  .recent_blogs .blogs {
     .photo {
-      left: 5px;
-      position: absolute;
-      top: 5px;
-      z-index: 1;
-      img { height: auto; max-width: 100%; }
+      position: static;
+      width: 100%;
+      img { margin-bottom: 10px; width: 100%; }
     }
-    .details { padding-left: 210px; }
-    .title {
-      font-size: 18px;
-      line-height: 1.3;
+    .details {
+      padding-left: 0;
     }
-    .text { padding: 10px 0 15px 10px; }
-    .read_more {
-      bottom: 5px;
-      position: absolute;
-      right: 5px;
-    }
+    .blog_well:nth-child(n+3) { display: none; }
   }
 }
