--- a/txrx/static/less/blog.less
+++ b/txrx/static/less/blog.less
@@ -12,7 +12,7 @@
     font-size: 18px;
     line-height: 1.3;
   }
-  .text { padding: 10px 0 15px 10px; }
+  .text { padding: 10px 10px 20px; }
   .read_more {
     bottom: 5px;
     position: absolute;
@@ -20,7 +20,7 @@
   }
 }
 
-@media (max-width: @screen-xs-max) {
+@media (max-width: @screen-sm-max) {
   .recent_blogs .blogs {
     .photo {
       position: static;
