--- a/txrx/static/less/blog.less
+++ b/txrx/static/less/blog.less
@@ -12,7 +12,7 @@
     font-size: 18px;
     line-height: 1.3;
   }
-  .text { padding: 10px 10px 20px; }
+  .text { padding: 10px 0px; }
   .read_more {
     bottom: 5px;
     position: absolute;
