--- a/txrx/static/less/bootstrap/less/variables.less
+++ b/txrx/static/less/bootstrap/less/variables.less
@@ -293,7 +293,7 @@
 // Number of columns in the grid.
 @grid-columns:              12;
 // Padding between columns. Gets divided in half for the left and right.
-@grid-gutter-width:         2%;
+@grid-gutter-width:         10px;
 // Navbar collapse
 // Point at which the navbar becomes uncollapsed.
 @grid-float-breakpoint:     @screen-md-min;
