--- a/txrx/templates/index.html
+++ b/txrx/templates/index.html
@@ -36,7 +36,7 @@
   </div>
   <a class="ViewAll colored-link" href="{% url "thing_index" %}">View More Projects &raquo;</a>
 </section>
-<section class="recent_blogs row">
+<section class="BlogList row">
   <h3 class="block_title">Recent Blogs</h3>
   {% include "_blog_list.html" %}
   <a class="ViewAll" href="{% url "thing_index" %}">View More Blogs &raquo;</a>
