--- a/txrx/static/less/blog.less
+++ b/txrx/static/less/blog.less
@@ -1,30 +1,34 @@
-.recent_blogs {
-  min-height: 0;
-  overflow: hidden;
+.BlogList {
   .blogs {
-  .well { position: relative; min-height: 160px; }
-  .photo {
-    left: 5px;
-    position: absolute;
-    top: 5px;
-    z-index: 1;
-    img { height: auto; max-width: 100%; }
+    .well { position: relative; min-height: 160px; }
+    .photo {
+      left: 5px;
+      position: absolute;
+      top: 5px;
+      z-index: 1;
+      img { height: auto; max-width: 100%; }
+    }
+    .details { padding-left: 210px; }
+    .title {
+      font-size: 18px;
+      line-height: 1.3;
+      position: relative;
+      .edit {
+	position: absolute;
+	right: 5px;
+	top: 5px;
+      }
+    }
+    .text { padding: 10px 0px 20px; }
+    .read_more {
+      bottom: 5px;
+      position: absolute;
+      right: 5px;
+    }
   }
-  .details { padding-left: 210px; }
-  .title {
-    font-size: 18px;
-    line-height: 1.3;
-  }
-  .text { padding: 10px 0px 20px; }
-  .read_more {
-    bottom: 5px;
-    position: absolute;
-    right: 5px;
-  }
-}
 }
 @media (max-width: @screen-sm-max) {
-  .recent_blogs .blogs {
+  .BlogList .blogs {
     .photo {
       position: static;
       width: 100%;
