--- a/txrx/templates/_messages.html
+++ b/txrx/templates/_messages.html
@@ -1,5 +1,5 @@
 {% for message in messages %}
-<div class="alert {{ message.tags }}">
+<div class="alert alert-{{ message.tags }}">
   {{ message }}
 </div>
 {% endfor %}
