blog url was wrong

--- a/txrx/static/less/blog.less
+++ b/txrx/static/less/blog.less
@@ -12,6 +12,7 @@
     .title {
       font-size: 18px;
       line-height: 1.3;
+      padding-right: 30px;
       position: relative;
       .edit {
 	position: absolute;
