--- a/txrx/templates/index.html
+++ b/txrx/templates/index.html
@@ -39,6 +39,6 @@
 <section class="BlogList row">
   <h3 class="block_title">Recent Blogs</h3>
   {% include "_blog_list.html" %}
-  <a class="ViewAll" href="{% url "thing_index" %}">View More Blogs &raquo;</a>
+  <a class="ViewAll" href="{% url "blog_home" %}">View More Blogs &raquo;</a>
 </section>
 {% endblock %}
