--- a/txrx/templates/sides/_contact_us.html
+++ b/txrx/templates/sides/_contact_us.html
@@ -13,8 +13,9 @@
     </li>
     <li>&nbsp;</li>
     <li><b>Social/Online</b></li>
-    <li><a href="">Facebook</a></li>
-    <li><a href="">Twitter</a></li>
+    <li><a href="https://www.facebook.com/TxRxLabs">Facebook</a></li>
+    <li><a href="https://twitter.com/txrxlabs">Twitter</a></li>
+    <li><a href="http://www.meetup.com/TXRXLabs/">Meetup.com</a></li>
     <li><a href="https://groups.google.com/forum/#!forum/txrxlabs">Google Groups (Public)</a></li>
     <li><a href="https://groups.google.com/forum/#!forum/txrxmembership">Google Groups (Members)</a></li>
   </ul>
