fixing some styling issues on the membership page

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -84,6 +84,7 @@ h3.block_title {
   .membership {
     display: inline-block;
     margin: 0 10px 20px;
+    max-width: 100%;
     padding: 15px 20px;
     text-align: left; 
     width: 420px;
@@ -99,7 +100,7 @@ h3.block_title {
   }
   .button_box { padding-top: 15px; }
   form { text-align: center; }
-  select { max-width: 100%; }
+  select { width: 250px; max-width: 100%; }
 }
 
 @media (max-width: @screen-xs-min) {
