very minor tweak

--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -25,7 +25,7 @@
     display: block;
     font-size: 20px;
     line-height: 1.2em;
-    min-height: 2.4em;
+    min-height: 46px;
     text-transform: uppercase;
   }
   .dates {
