--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -57,7 +57,9 @@
   top: 5px;
   width: @cartWidth;
   z-index: 1;
-  .price { font-size: 25px; }
+  .price {
+    font-size: 25px;
+  }
   .EnrollLink {
     bottom: 0;
     left: 0;
@@ -92,8 +94,9 @@
   margin: 0 auto;
 }
 
-@media (max-width: 600px) {
+@media (max-width: @screen-sm-max) {
   .course {
+    .price { background: rgba(255,255,255,0.5); }
     height: auto;
     .details {
       padding: 0;
